--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -56,5 +56,9 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "@metamask/utils": "^3.3.1",
+    "ethers": "^5.7.2"
   }
 }
