--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "snap",
+  "name": "sourcify-snap",
   "version": "0.1.0",
-  "private": true,
-  "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "description": "Metamask Snap used to get human-readable transaction description from Sourcify",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/therealharpaljadeja/sourcify-snap"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "main": "src/index.ts",
@@ -25,6 +24,11 @@
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path .gitignore",
     "serve": "mm-snap serve",
     "start": "mm-snap watch"
+  },
+  "dependencies": {
+    "@ethereum-sourcify/contract-call-decoder": "^0.2.0",
+    "@metamask/utils": "^3.3.1",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.0.3",
@@ -56,10 +60,5 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  },
-  "dependencies": {
-    "@ethereum-sourcify/contract-call-decoder": "^0.2.0",
-    "@metamask/utils": "^3.3.1",
-    "ethers": "^5.7.2"
   }
 }
