fix: repository field

--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -4,7 +4,7 @@
   "proposedName": "From Sourcify",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/therealharpaljadeja/sourcify-snap"
   },
   "source": {
     "shasum": "FuluiuACMdb1BpiMmP/MLuRBF0QATxmmwjzImO+zsEQ=",
